Fixed Database errors